Fixes for RC 3.5.42.0

--- a/Release/Source/Ripley/RipleyServer.vcproj
+++ b/Release/Source/Ripley/RipleyServer.vcproj
@@ -484,6 +484,10 @@
 				RelativePath="RipleyServer.rc"
 				>
 			</File>
+			<File
+				RelativePath=".\StoredProcedure.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
