--- a/Release/Source/Shared/BBC.Dna.Users/BBC.Dna.Users.csproj
+++ b/Release/Source/Shared/BBC.Dna.Users/BBC.Dna.Users.csproj
@@ -118,6 +118,7 @@
     <Compile Include="UserExceptions.cs" />
     <Compile Include="UserGroup.cs" />
     <Compile Include="UserGroups.cs" />
+    <Compile Include="UserSiteGroups.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BBC.Dna.Common\BBC.Dna.Common.csproj">
