--- a/Main/Tests/FunctionalTests.Services.Forums/FunctionalTests.Services.Forums.csproj
+++ b/Main/Tests/FunctionalTests.Services.Forums/FunctionalTests.Services.Forums.csproj
@@ -82,6 +82,10 @@
       <Project>{ED8FAD29-DC4F-40DC-A275-45D215591FA2}</Project>
       <Name>BBC.Dna.Moderation %28Source\Shared\BBC.Dna.Moderation\BBC.Dna.Moderation%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Source\Shared\BBC.Dna.Objects\BBC.Dna.Objects.csproj">
+      <Project>{B4EA926E-7D99-4077-8315-882F413B994D}</Project>
+      <Name>BBC.Dna.Objects %28Source\Shared\BBC.Dna.Objects\BBC.Dna.Objects%29</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Source\Shared\BBC.Dna.Sites\BBC.Dna.Sites.csproj">
       <Project>{2CE05465-9B21-4CD9-A592-FABD2AD051B3}</Project>
       <Name>BBC.Dna.Sites %28Source\Shared\BBC.Dna.Sites\BBC.Dna.Sites%29</Name>
