--- a/Main/Source/Ripley/RipleyServer.vcproj
+++ b/Main/Source/Ripley/RipleyServer.vcproj
@@ -433,6 +433,10 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
+				RelativePath=".\deployripley.bat"
+				>
+			</File>
+			<File
 				RelativePath="RipleyServer.cpp"
 				>
 				<FileConfiguration
