Fixed another badly named test dll

--- a/Main/Tests/FunctionalTests.Services.Articles/FunctionalTests.Services.Articles.csproj
+++ b/Main/Tests/FunctionalTests.Services.Articles/FunctionalTests.Services.Articles.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{EDC6001A-89AF-443B-91DF-1FBF3AFC6F4E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BBC.Dna.Services.Comments.Functional.Tests</RootNamespace>
-    <AssemblyName>BBC.Dna.Services.Comments.Functional.Tests</AssemblyName>
+    <RootNamespace>FunctionalTests.Services.Articles</RootNamespace>
+    <AssemblyName>FunctionalTests.Services.Articles</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
