--- a/Main/Source/Schemas/Schemas.csproj
+++ b/Main/Source/Schemas/Schemas.csproj
@@ -131,6 +131,9 @@
     <None Include="Dna.Services.Categories\index.xsd" />
     <None Include="Dna.Services.Common\contributions.xsd" />
     <None Include="Dna.Services.Common\ExtraInfo.xsd" />
+    <None Include="Dna.Services.Common\site.xsd" />
+    <None Include="Dna.Services.Common\siteOption.xsd" />
+    <None Include="Dna.Services.Common\siteOptions.xsd" />
     <None Include="Dna.Services.Users\group.xsd" />
     <None Include="Dna.Services.Users\user.xsd" />
     <None Include="SiteManager.xsd" />
