API for returning a Users Bookmarks/ Links, Cliping an article (creating the Bookmarks/Links), Forum Source. Users contributions via identityusername. Retrieve Article by article name.

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1280,6 +1280,7 @@
     <None Include="fetchgroupsandmembersbysite.sql" />
     <None Include="finduserfromidentityusername.sql" />
     <None Include="cachegetlastpostdate.sql" />
+    <None Include="getdnauseridfromidentityusername.sql" />
     <None Include="getusercontributions.sql" />
     <None Include="GetAllGroups.sql" />
     <None Include="getuserfromidentityusername.sql" />
