--- a/Main/Tests/FunctionalTests.Services.Forums/FunctionalTests.Services.Forums.csproj
+++ b/Main/Tests/FunctionalTests.Services.Forums/FunctionalTests.Services.Forums.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="forumSource.cs" />
     <Compile Include="forumThreadPosts.cs" />
     <Compile Include="forumThreads.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
