Support for maintenance mode

--- a/Main/Web.config
+++ b/Main/Web.config
@@ -64,6 +64,8 @@
     <add key="ServerList" value="127.0.0.1:11211" />
     <!-- Secondary Memcached serverlist for functional tests -->
     <add key="SecondaryMemcachedServer" value="10.161.68.132:11211" />
+    <!-- Maintence Mode enabled (1) or disabled (0) -->
+    <add key="MaintenanceMode" value="0"/>
   </appSettings>
   <system.web>
 
