--- a/Main/Tests/FunctionalTests.DnaPages/FunctionalTests.DnaPages.csproj
+++ b/Main/Tests/FunctionalTests.DnaPages/FunctionalTests.DnaPages.csproj
@@ -276,6 +276,7 @@
     <Compile Include="NUnitAdapter.cs" />
     <Compile Include="RadioButtonListTester.cs" />
     <Compile Include="SiteOptionsTests.cs" />
+    <Compile Include="UserListPageTest.cs" />
     <Compile Include="UserSynchronisationTests.cs" />
   </ItemGroup>
   <ItemGroup>
