--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -547,7 +547,6 @@
     <None Include="getemailinsert.sql" />
     <None Include="getemailinsertgroups.sql" />
     <None Include="getemailinsertsbyclass.sql" />
-    <None Include="getemailinsertsbysite.sql" />
     <None Include="getemaillistsforuser.sql" />
     <None Include="getemailtemplateidbyname.sql" />
     <None Include="getemailtemplatesbymodclassid.sql" />
@@ -1281,6 +1280,8 @@
     <None Include="finduserfromidentityusername.sql" />
     <None Include="cachegetlastpostdate.sql" />
     <None Include="getdnauseridfromidentityusername.sql" />
+    <None Include="getemailinsertsbysite.sql" />
+    <None Include="getemailinsertsbysite2.sql" />
     <None Include="getusercontributions.sql" />
     <None Include="GetAllGroups.sql" />
     <None Include="getuserfromidentityusername.sql" />
