--- a/Main/Source/Shared/BBC.Dna.Moderation/BBC.Dna.Moderation.csproj
+++ b/Main/Source/Shared/BBC.Dna.Moderation/BBC.Dna.Moderation.csproj
@@ -92,7 +92,11 @@
     <Compile Include="BannedEmailsList.cs" />
     <Compile Include="Context.cs" />
     <Compile Include="Contracts\ModerationItem.cs" />
+    <Compile Include="EmailInserts.cs" />
+    <Compile Include="EmailTemplate.cs" />
     <Compile Include="ExternalLinkModeration.cs" />
+    <Compile Include="EmailInsertGroups.cs" />
+    <Compile Include="InsertTypes.cs" />
     <Compile Include="ModerationClassList.cs" />
     <Compile Include="ModerationClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
