--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -171,6 +171,13 @@
     <Compile Include="ModerateHomePage.aspx.designer.cs">
       <DependentUpon>ModerateHomePage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ModerationEmailManagementPage.aspx.cs">
+      <DependentUpon>ModerationEmailManagementPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ModerationEmailManagementPage.aspx.designer.cs">
+      <DependentUpon>ModerationEmailManagementPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="TermsFilterImport.aspx.cs">
       <DependentUpon>TermsFilterImport.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -861,6 +868,7 @@
     <Content Include="MBAdminAssets.aspx" />
     <Content Include="MBAdminDesign.aspx" />
     <Content Include="ModerateHomePage.aspx" />
+    <Content Include="ModerationEmailManagementPage.aspx" />
     <Content Include="TermsFilterImport.aspx" />
     <Content Include="TermsFilterAdmin.aspx" />
   </ItemGroup>
