User Search, more User Subscriptions APIs, Article API  Submit Article For Review and removed email from the API user object

--- a/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
@@ -71,6 +71,7 @@
     <Compile Include="ArticleInfoReferencesExternalLink.cs" />
     <Compile Include="ArticleInfoSubmittable.cs" />
     <Compile Include="ArticleSubscriptionsList.cs" />
+    <Compile Include="BlockedUserSubscriptionsList.cs" />
     <Compile Include="Club.cs" />
     <Compile Include="ArticleInfoReferencesUser.cs" />
     <Compile Include="Contribution.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="Index.cs" />
     <Compile Include="Link.cs" />
     <Compile Include="LinksList.cs" />
+    <Compile Include="LinkSubscriptionsList.cs" />
     <Compile Include="MessageBoardBackup.cs" />
     <Compile Include="FrontPageElement.cs" />
     <Compile Include="Category.cs" />
@@ -89,8 +91,10 @@
     <Compile Include="MessageBoardPublishError.cs" />
     <Compile Include="MonthSummary.cs" />
     <Compile Include="Recommendations.cs" />
+    <Compile Include="ReviewSubmission.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="SmileyTranslator.cs" />
+    <Compile Include="SubscribingUsersList.cs" />
     <Compile Include="ThreadPostSummary.cs" />
     <Compile Include="ForumHelper.cs" />
     <Compile Include="OnlineUser.cs" />
