--- a/Main/Source/Schemas/Schemas.csproj
+++ b/Main/Source/Schemas/Schemas.csproj
@@ -131,13 +131,17 @@
     <None Include="Dna.Services.Articles\articleSummary.xsd" />
     <None Include="Dna.Services.Categories\index.xsd" />
     <None Include="Dna.Services.Common\articleSubscriptionsList.xsd" />
+    <None Include="Dna.Services.Common\blockedUserSubscriptionsList.xsd" />
     <None Include="Dna.Services.Common\contributions.xsd" />
     <None Include="Dna.Services.Common\ExtraInfo.xsd" />
     <None Include="Dna.Services.Common\link.xsd" />
     <None Include="Dna.Services.Common\linksList.xsd" />
+    <None Include="Dna.Services.Common\linkSubscriptionsList.xsd" />
     <None Include="Dna.Services.Common\site.xsd" />
     <None Include="Dna.Services.Common\siteOption.xsd" />
     <None Include="Dna.Services.Common\siteOptions.xsd" />
+    <None Include="Dna.Services.Common\subscribingUsersList.xsd" />
+    <None Include="Dna.Services.Common\userSubscriptionsList.xsd" />
     <None Include="Dna.Services.Users\group.xsd" />
     <None Include="Dna.Services.Users\user.xsd" />
     <None Include="SiteManager.xsd" />
@@ -548,7 +552,7 @@
       <SubType>
       </SubType>
     </None>
-    <None Include="UsersubscriptionLinksList.xsd" />
+    <None Include="UserSubscriptionLinksList.xsd" />
     <None Include="ViewingUser.xsd">
       <SubType>
       </SubType>
