--- a/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="ArticleSubscriptionsListTest.cs" />
     <Compile Include="ArticleSummaryTest.cs" />
     <Compile Include="ArticleTest.cs" />
+    <Compile Include="BlockedUserSubscriptionsListTest.cs" />
     <Compile Include="CategorySummaryTest.cs" />
     <Compile Include="ForumSourceTest.cs" />
     <Compile Include="IndexTest.cs" />
@@ -90,6 +91,7 @@
     <Compile Include="GuideEntryTest.cs" />
     <Compile Include="CategoryTest.cs" />
     <Compile Include="LinksListTest.cs" />
+    <Compile Include="LinkSubscriptionsListTest.cs" />
     <Compile Include="LinkTest.cs" />
     <Compile Include="MonthSummaryTest.cs" />
     <Compile Include="OnlineUsersTest.cs" />
@@ -98,9 +100,11 @@
     <Compile Include="RelatedArticleTest.cs" />
     <Compile Include="RelatedClubsTest.cs" />
     <Compile Include="ReviewForumTest.cs" />
+    <Compile Include="ReviewSubmissionTest.cs" />
     <Compile Include="SearchTest.cs" />
     <Compile Include="SubscribeResultTest.cs" />
     <Compile Include="SubscribeStateTest.cs" />
+    <Compile Include="SubscribingUsersListTest.cs" />
     <Compile Include="ThreadPostSummaryTest.cs" />
     <Compile Include="ThreadPostTest.cs" />
     <Compile Include="ThreadSummaryTest.cs" />
@@ -123,6 +127,10 @@
     <ProjectReference Include="..\BBC.Dna.Data\BBC.Dna.Data.csproj">
       <Project>{F79CF818-D597-4C2F-A61D-87773951E234}</Project>
       <Name>BBC.Dna.Data %28Source\Shared\BBC.Dna.Data\BBC.Dna.Data%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BBC.Dna.Moderation.Utils.Tests\BBC.Dna.Moderation.Utils.Tests.csproj">
+      <Project>{CD50FF01-F604-4C12-BFE7-199CE495313F}</Project>
+      <Name>BBC.Dna.Moderation.Utils.Tests</Name>
     </ProjectReference>
     <ProjectReference Include="..\BBC.DNA.Moderation.Utils\BBC.DNA.Moderation.Utils.csproj">
       <Project>{8EB8245F-927C-469B-9DBB-4BAED2A9F420}</Project>
