- Create Article first pass. Shouild be able to create or update an article using XML or HTML. Added functional tests for reading/writing and basic error checking - Fixed contributions bug and returning count - Refactored extraInfo out of article and introduced usage of Type instead - Changed ArticleInfo from a nested type to an enum and fixed associated xsd's and got all tests passing

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1280,6 +1280,7 @@
     <None Include="finduserfromidentityuserid.sql" />
     <None Include="finduserfromidentityusername.sql" />
     <None Include="cachegetlastpostdate.sql" />
+    <None Include="getcontributions.sql" />
     <None Include="getdnauseridfromidentityusername.sql" />
     <None Include="getemailinsertsbysite.sql" />
     <None Include="getemailinsertsbysite2.sql" />
