--- a/Main/Source/Shared/BBC.DNA.Moderation.Utils/BBC.DNA.Moderation.Utils.csproj
+++ b/Main/Source/Shared/BBC.DNA.Moderation.Utils/BBC.DNA.Moderation.Utils.csproj
@@ -69,11 +69,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AllowedUrls.cs" />
     <Compile Include="CommentStatus.cs" />
     <Compile Include="ModerationStatus.cs" />
     <Compile Include="ProfanityCache.cs" />
     <Compile Include="ProfanityFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UrlFilter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BBC.Dna.Common\BBC.Dna.Common.csproj">
