The last changes around Calling User for Article Permissions caused some GetArticle methods to require the user to be logged in, also changed user/article subscription tests to create test entries as plain text

--- a/Main/Source/Schemas/Schemas.csproj
+++ b/Main/Source/Schemas/Schemas.csproj
@@ -142,6 +142,7 @@
     <None Include="Dna.Services.Common\siteOptions.xsd" />
     <None Include="Dna.Services.Common\subscribingUsersList.xsd" />
     <None Include="Dna.Services.Common\userSubscriptionsList.xsd" />
+    <None Include="Dna.Services.Forums\forumSource.xsd" />
     <None Include="Dna.Services.Users\group.xsd" />
     <None Include="Dna.Services.Users\user.xsd" />
     <None Include="SiteManager.xsd" />
