Changes to correct the extra info block put into the DB for the new API and return siteid in the pageauthors so the groups are put in

--- a/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
@@ -78,6 +78,7 @@
     <Compile Include="ArticleTest.cs" />
     <Compile Include="BlockedUserSubscriptionsListTest.cs" />
     <Compile Include="CategorySummaryTest.cs" />
+    <Compile Include="ExtraInfoCreatorTest.cs" />
     <Compile Include="ForumSourceTest.cs" />
     <Compile Include="IndexTest.cs" />
     <Compile Include="ContributionsTest.cs" />
