--- a/Main/Source/Shared/BBC.Dna.Moderation.Tests/BBC.Dna.Moderation.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Moderation.Tests/BBC.Dna.Moderation.Tests.csproj
@@ -81,6 +81,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BannedEmailsTests.cs" />
+    <Compile Include="EMailInsertsTests.cs" />
+    <Compile Include="EMailTemplatesTests.cs" />
     <Compile Include="ModerationClassListTest.cs" />
     <Compile Include="ModerationClassTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
