--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -424,7 +424,7 @@
     <None Include="getacceptedentries.sql" />
     <None Include="getactionlistforclub.sql" />
     <None Include="getactionlistforuser.sql" />
-    <None Include="getaforumgroupalertid.sql" />
+    <None Include="getforumgroupalertid.sql" />
     <None Include="getalertgroupsettings.sql" />
     <None Include="GetAlertsToSend.sql" />
     <None Include="getaliasesinhierarchy.sql" />
@@ -1281,13 +1281,23 @@
     <None Include="finduserfromidentityuserid.sql" />
     <None Include="finduserfromidentityusername.sql" />
     <None Include="cachegetlastpostdate.sql" />
+    <None Include="getbievents.sql" />
+    <None Include="getcontributions.sql" />
     <None Include="getrecentcontributions.sql" />
     <None Include="getdnauseridfromidentityusername.sql" />
     <None Include="getemailinsertsbysite.sql" />
     <None Include="getemailinsertsbysite2.sql" />
     <None Include="getusercontributions.sql" />
+    <None Include="generatebievents.sql" />
+    <None Include="generatepremodposting.sql" />
     <None Include="GetAllGroups.sql" />
     <None Include="getuserfromidentityusername.sql" />
+    <None Include="QueueThreadEntryForModeration.sql" />
+    <None Include="removehandledbievents.sql" />
+    <None Include="riskmod_getsitestate.sql" />
+    <None Include="riskmod_postriskmodthreadentrytoforum.sql" />
+    <None Include="riskmod_processriskassessmentforthreadentry.sql" />
+    <None Include="riskmod_setsitestate.sql" />
     <None Include="updatesitedefaultskin.sql" />
     <None Include="getindexofcomment.sql" />
     <None Include="EditTopic2.sql" />
