database scripts and sps for mb search

--- a/Main/Source/Databases/The Guide/functions/functions.csproj
+++ b/Main/Source/Databases/The Guide/functions/functions.csproj
@@ -59,5 +59,8 @@
     <None Include="udf_getguideentryfulltextcatalogname.sql" />
     <None Include="udf_getfulltextcatalogpopulatestatusdescription.sql" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="udf_getthreadentryfulltextcatalogname.sql" />
+  </ItemGroup>
   <!--<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />-->
 </Project>
