--- a/Main/Source/Shared/TestUtils/TestUtils.csproj
+++ b/Main/Source/Shared/TestUtils/TestUtils.csproj
@@ -116,6 +116,7 @@
     </Compile>
     <Compile Include="DataReaderFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomStringGenerator.cs" />
     <Compile Include="Serializer.cs" />
     <Compile Include="SnapshotInitialisation.cs">
       <SubType>Code</SubType>
