--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -129,6 +129,13 @@
     <Compile Include="ContentSignifPage.aspx.designer.cs">
       <DependentUpon>ContentSignifPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="SearchThreadPostPage.aspx.cs">
+      <DependentUpon>SearchThreadPostPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SearchThreadPostPage.aspx.designer.cs">
+      <DependentUpon>SearchThreadPostPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="UserList.aspx.cs">
       <DependentUpon>UserList.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -862,6 +869,7 @@
     <Content Include="App_Data\forum scheduled closed.xml" />
     <Content Include="App_Data\test_template6music.htm" />
     <Content Include="App_Data\test_templateBlast.htm" />
+    <Content Include="SearchThreadPostPage.aspx" />
     <Content Include="UserList.aspx" />
     <Content Include="MBBackupRestore.aspx" />
     <Content Include="MBAdmin.aspx" />
