Fix for GuideEntry to try and fix up some of the GuideML and fail a bit gracefully if something goes wrong. Adds in SoloGuideEntries Article service. And Service to allow a Scout to Recommend an article.

--- a/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Search.cs" />
     <Compile Include="SearchThreadPosts.cs" />
     <Compile Include="SmileyTranslator.cs" />
+    <Compile Include="SoloGuideEntries.cs" />
     <Compile Include="SubscribingUsersList.cs" />
     <Compile Include="ThreadPostSummary.cs" />
     <Compile Include="ForumHelper.cs" />
