--- a/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
@@ -107,6 +107,7 @@
     <Compile Include="SearchTest.cs" />
     <Compile Include="SearchThreadPostsTest.cs" />
     <Compile Include="SearchThreadPostTest.cs" />
+    <Compile Include="SiteStatisticsTest.cs" />
     <Compile Include="SoloGuideEntriesTest.cs" />
     <Compile Include="SubscribeResultTest.cs" />
     <Compile Include="SubscribeStateTest.cs" />
