--- a/Main/Source/BBC.Dna/BBC.DNA.csproj
+++ b/Main/Source/BBC.Dna/BBC.DNA.csproj
@@ -121,15 +121,13 @@
     <Compile Include="ContentSignifAdminBuilder.cs" />
     <Compile Include="ContentSignifSettings.cs" />
     <Compile Include="ContentSignifSettingsParameters.cs" />
+    <Compile Include="HostDashboard.cs" />
     <Compile Include="SearchThreadPostPageBuilder.cs" />
     <Compile Include="MBBackupRestore.cs" />
     <Compile Include="MBAdminDesignBuilder.cs" />
     <Compile Include="ModerateHome.cs" />
     <Compile Include="ModerationEmailManagementBuilder.cs" />
-    <Compile Include="ModeratorInfo.cs" />
     <Compile Include="ModHomeParameters.cs" />
-    <Compile Include="ModQueueStat.cs" />
-    <Compile Include="ModStats.cs" />
     <Compile Include="TermsFilterAdminPageImport.cs" />
     <Compile Include="TermsFilterAdminPageBuilder.cs" />
     <Compile Include="ForumPageBuilder.cs" />
