--- a/Main/Source/Shared/BBC.Dna.Common.Tests/BBC.Dna.Common.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Common.Tests/BBC.Dna.Common.Tests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalHelperTests.cs" />
     <Compile Include="SignalTests.cs" />
