--- a/Main/Source/Shared/BBC.Dna.Common/BBC.Dna.Common.csproj
+++ b/Main/Source/Shared/BBC.Dna.Common/BBC.Dna.Common.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -60,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CachableBase.cs" />
+    <Compile Include="Date.cs" />
     <Compile Include="ISignalBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalHelper.cs" />
