--- a/Main/Source/Shared/BBC.Dna.Moderation/BBC.Dna.Moderation.csproj
+++ b/Main/Source/Shared/BBC.Dna.Moderation/BBC.Dna.Moderation.csproj
@@ -99,6 +99,9 @@
     <Compile Include="InsertTypes.cs" />
     <Compile Include="ModerationClassList.cs" />
     <Compile Include="ModerationClass.cs" />
+    <Compile Include="ModeratorInfo.cs" />
+    <Compile Include="ModQueueStat.cs" />
+    <Compile Include="ModStats.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TermsFilterAdmin.cs" />
     <Compile Include="TermsLists.cs" />
