--- a/Main/Source/Shared/BBC.Dna.Moderation/BBC.Dna.Moderation.csproj
+++ b/Main/Source/Shared/BBC.Dna.Moderation/BBC.Dna.Moderation.csproj
@@ -103,6 +103,7 @@
     <Compile Include="ModQueueStat.cs" />
     <Compile Include="ModStats.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SiteSummaryStats.cs" />
     <Compile Include="TermsFilterAdmin.cs" />
     <Compile Include="TermsLists.cs" />
     <Compile Include="TermsList.cs" />
