Fixes to JS and skin for mod exlink page - ensured all items are validated with JS and no items can be referred with user referral details

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1276,6 +1276,7 @@
     <None Include="addthreadtostickylist.sql" />
     <None Include="addTermsFilterUpdate.sql" />
     <None Include="addTermsFilterTerm.sql" />
+    <None Include="FetchModerationStatisticsPerUserByType.sql" />
     <None Include="getsitedailysummaryreportbytype.sql" />
     <None Include="getsitedailysummaryreportbysite.sql" />
     <None Include="fetchmoderationstatisticsbysite.sql" />
