Dashboard activity page - events registering - event service processing - activity feed page - threadmodhistory page and integration with moderatepostings - skin for activity page

--- a/Main/Source/Databases/The Guide/functions/functions.csproj
+++ b/Main/Source/Databases/The Guide/functions/functions.csproj
@@ -63,6 +63,7 @@
     <None Include="udf_getthreadentryfulltextcatalogname.sql" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="udf_GetUsername.sql" />
     <None Include="udf_dateonly.sql">
       <SubType>Component</SubType>
     </None>
