--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
@@ -101,7 +101,7 @@
   </loggingConfiguration>
   <connectionStrings>
     <add name="DnaEventProcessorService.Properties.Settings.guideConnectionString"
-      connectionString="Data Source=.\sqlserver2005;Initial Catalog=smallGuide;Integrated Security=True"
+      connectionString="database=newguide; server=vp-dev-dna-db1\sql2005; user id=sa; password=b0x0ftr1cks;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--<connectionStrings>
