Re ordering the type enum to align with old numbering, Block Unblock user tests, Delete/Remove Friend, Delete/Remove Link, Unsubscribe From User, Entities &entity; PreviewArticle API which will load the article GuideML in and validate but not create the Article. Subscribe/Unsubscribe to/from Forum/Thread API. Hide Reopen Close Thread

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1276,6 +1276,8 @@
     <None Include="addthreadtostickylist.sql" />
     <None Include="addTermsFilterUpdate.sql" />
     <None Include="addTermsFilterTerm.sql" />
+    <None Include="getcontribution.sql" />
+    <None Include="getrecentcontributions.sql" />
     <None Include="getsiteevents.sql" />
     <None Include="getsiteevents_newuser.sql" />
     <None Include="getsiteevents_usermoderation.sql" />
@@ -1302,7 +1304,6 @@
     <None Include="cachegetlastpostdate.sql" />
     <None Include="getbievents.sql" />
     <None Include="getnextthreadentriessearchbatch.sql" />
-    <None Include="getrecentcontributions.sql" />
     <None Include="getdnauseridfromidentityusername.sql" />
     <None Include="getemailinsertsbysite.sql" />
     <None Include="getemailinsertsbysite2.sql" />
